Stop viewport overflow

--- a/main-style.scss
+++ b/main-style.scss
@@ -186,10 +186,13 @@ body {
     }
   }
 }
-#windows-container {
+.windows-container {
   position: absolute;
   left: 0;
   top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .template {
